--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container"> 
-        Контакты в шапке
+        <a href="mailto:krosshka_liss@gmail.com">krosshka_liss@gmail.com</a>
+        <a href="tel:+380 1233 456 789">+380 1233 456 789</a>
       </div>
     </header>
 
@@ -25,10 +26,13 @@
     <section class="intro">
       <div class=" container"> 
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure>
+          <img src="files/user.jpg" width="270" height="320" alt="Фотография Крошки Лиса">
+        </figure> 
         <h3>Пара слов о себе</h3>
-        <p>Текст с парой слов о себе.</p>
+        <p>Маленький лис с интресной способностью верстальщика. Пока что начинающего, но лисы быстро учаться!</p>
         <h3>Чем могу быть полезен</h3>
-        <p>Текст о том, чем могу быть полезен.</p>
+        <p>Могу создавть чудеса.</p>
       </div>
       
     </section>
@@ -37,9 +41,12 @@
       <div class=" container"> 
         <h2 class="subheading">Мои работы</h2>
 
-        <h3>Магазин товаров для дома</h3>
+        <h3>Cайт посвященный Жуль Верну</h3>
         <p>Мой первый сайт.</p>
-  
+        <figure class="project-image">
+          <img src="files/project1.jpg" width="928" height="536" alt="Cайт ">
+        </figure>
+        <a class="button" href="https://sites.google.com/view/fkga-jules-verne/%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0">Открыть страницу</a>
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -47,7 +54,9 @@
 
     <footer  class="page-header">
       <div  class="container"> 
-        Контакты в подвале
+        <a class="footer-email" href="mailto:krosshka_liss@gmail.com">krosshka_liss@gmail.comm</a>
+       <a class="footer-phone" href="tel:+380 1233 456 789">++380 1233 456 789</a>
+        Всегда ваш Крошка Лис
       </div>
     </footer>
   </body>
